# cppecs

./: CMakeLists.txt  README.md
src/: components_list.hpp  components_registry.hpp  main.cpp
src/ecs/: metastructure.cpp  pool.cpp  registry.cpp
